add endpoint get product by id
